import component manager colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
     </div>
-
+    <app-manager-colors></app-manager-colors>
     <app-footer></app-footer>
   </div>
 </div>
