update project angualr 14

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <ul class=" nav">
       <li class=" nav-item">
         <a class=" nav-link" href="https://www.creative-tim.com?ref=bda-footer">
-          Creative Tim
+          Vini Politta
         </a>
       </li>
       <li class=" nav-item">
@@ -18,8 +18,8 @@
     <div class=" copyright">
       &copy; {{ test | date: "yyyy" }} made with
       <i class=" tim-icons icon-heart-2"> </i> by
-      <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Creative Tim </a>
-      for a better web.
+      <a href="#" target="_blank"> Vini Politta </a>
+      for a better web. update angular 14
     </div>
   </div>
 </footer>
