--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
         <div class="card-header">
           <div class="row">
             <div class="col-sm text-center">
-              <h5 class="card-category">Total Shipment s</h5>
-              <h2 class="card-title">Performance</h2>
+              <h5 class="card-category">Total Shipments</h5>
+              <h2 class="card-title">Performance angular</h2>
               <button class="btn btn-primary" (click)="showNotification('top', 'right')"><i class="fa-solid fa-star"></i>teste</button>
 
             </div>
