--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,22 +1,24 @@
-
-  <div class="row">
-    <div class="col-12">
-      <div class="card card-chart">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-sm text-center">
-              <h5 class="card-category">Total Shipments</h5>
-              <h2 class="card-title">Performance angular 14</h2>
-              <button class="btn btn-primary" (click)="showNotification('top', 'right')"><i class="fa-solid fa-star"></i>teste</button>
-
-            </div>
+<div class="row">
+  <div class="col-12">
+    <div class="card card-chart">
+      <div class="card-header">
+        <div class="row">
+          <div class="col-sm text-center">
+            <h5 class="card-category">Total Shipments</h5>
+            <h2 class="card-title">Performance angular 14</h2>
+            <button
+              class="btn btn-primary"
+              (click)="showNotification('bottom', 'right')"
+            >
+              <i class="fa-solid fa-star"></i>teste
+            </button>
           </div>
         </div>
-        <div class="card-body">
-          <h2>teste</h2>
-          <div class="chart-area"><canvas id="chartBig1"> </canvas></div>
-        </div>
+      </div>
+      <div class="card-body">
+        <h2>teste</h2>
+        <div class="chart-area"><canvas id="chartBig1"> </canvas></div>
       </div>
     </div>
   </div>
-
+</div>
