--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <div class="card card-chart">
       <div class="container mt-3">
-        <h3>Eventos</h3>
+        <app-title [title]="'Eventos'" [subTitle]="'Lista de Eventos'" ></app-title>
 
         <div class="form-group row">
           <label for="staticEmail" class="col-sm-1 col-form-label"
