--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,90 +1,28 @@
 <div class="row">
   <div class="col-12">
     <div class="card card-chart">
-      <div class="container mt-3">
-        <app-title [title]="'Eventos'" [subTitle]="'Lista de Eventos'" ></app-title>
-
-        <div class="form-group row">
-          <label for="staticEmail" class="col-sm-1 col-form-label"
-            >Filter:</label
-          >
-          <div class="col-sm-4">
-            <input
-              class="form-control mb-2"
-              id="staticEmail"
-              type="text"
-              placeholder="Search"
-              [(ngModel)]="filterList"
-            />
-          </div>
-        </div>
-
-        <div class="table-responsive">
-          <table class="table table-striped mb-3">
-            <thead class="table-dark">
-              <tr>
-                <th (click)="showImageHtml()">
-                  <i
-                    class="{{ showImage ? 'fa fa-eye' : 'fa fa-eye-slash' }}"
-                  ></i>
-                  {{ showImage ? "Show" : "Hide" }}
-                </th>
-                <th>#</th>
-                <th>Tema</th>
-                <th>Local</th>
-                <th class="text-center">Data</th>
-                <th>Qtd Pessoas</th>
-                <th>Lote</th>
-                <th class="text-center">Opçoes</th>
-              </tr>
-            </thead>
-            <tbody *ngIf="eventos && eventos.length">
-              <tr *ngFor="let evento of eventsFilter">
-                <td>
-                  <img
-                    [collapse]="showImage"
-                    [isAnimated]="true"
-                    src="/assets/img/{{ evento.imagemURL }}"
-                    [style.width.px]="widthImg"
-                    [style.margin.px]="margenImg"
-                  />
-                </td>
-                <td>{{ evento.id }}</td>
-                <td>{{ evento.tema }}</td>
-                <td>{{ evento.local }}</td>
-                <td>{{ evento.dataEvento | dateTimeFormatPipe }}</td>
-                <td class="text-center">{{ evento.qtdPessoas }}</td>
-                <td>{{ evento.lotes[0].nome }}</td>
-                <td class="text-center">
-                  <button tooltip="Editar" class="btn btn-primary btn-sm">
-                    <i class="fa-regular fa-pen-to-square"></i>
-                  </button>
-                  &nbsp;
-                  <button (click)="openModal(template)" tooltip="Excluir" class="btn btn-danger btn-sm">
-                    <i class="fa-regular fa-trash-can"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-            <tfoot *ngIf="!eventos.length || !eventsFilter.length">
-              <tr>
-                <td colspan="8" class="text-center">
-                  <h4>Nenhum evento encontrado!</h4>
-                </td>
-              </tr>
-            </tfoot>
-          </table>
-        </div>
+      <div class="container">
+        <app-title
+          [iconClass]="'fa fa-calendar-alt'"
+          [title]="'Eventos'"
+          [subTitle]="'Lista de Eventos'"
+          [botaoListar]="true"
+        ></app-title>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
 </div>
 
 <!-- MODAL -->
-<ng-template #template>
+<!-- <ng-template #template>
   <div class="modal-body text-center">
     <p>Tem certeza que irá deletar o evento?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()" >Yes</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Yes
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      No
+    </button>
   </div>
-</ng-template>
+</ng-template> -->
