--- a/src/app/components/user/perfil/perfil.component.html
+++ b/src/app/components/user/perfil/perfil.component.html
@@ -1,8 +1,15 @@
 <div class="row">
   <div class="col-md-8">
     <div class="card">
-      <div class="card-header"><h5 class="title">Edit Profile</h5></div>
-      <div class="card-body">
+      <div class="card-header">
+        <app-title
+        [iconClass]="'fa fa-user-alt'"
+        [title]="'Perfil'"
+        [subTitle]="'Detalhe Usuario'"
+        ></app-title>
+
+      </div>
+      <div class="card-body ">
         <form>
           <div class="row">
             <div class="col-md-5 pr-md-1">
