--- a/src/app/shared/manager-colors/manager-colors.component.html
+++ b/src/app/shared/manager-colors/manager-colors.component.html
@@ -25,12 +25,12 @@
           <div class=" clearfix"></div>
         </a>
       </li>
-      <li class=" adjustments-line text-center color-change">
+      <!-- <li class=" adjustments-line text-center color-change">
         <span class=" color-label"> LIGHT MODE </span>
         <span class=" badge light-badge mr-2" (click)="changeDashboardColor('white-content')"> </span>
         <span class=" badge dark-badge ml-2" (click)="changeDashboardColor('black-content')"> </span>
         <span class=" color-label"> DARK MODE </span>
-      </li>
+      </li> -->
     </ul>
   </div>
 </div>
