--- a/src/app/shared/title/title.component.html
+++ b/src/app/shared/title/title.component.html
@@ -1,2 +1,12 @@
-<h3>{{ title }}</h3>
-<h4>{{ subTitle }}</h4>
+<div class="d-flex align-items-center p-3 my-3 bg-purple rounded">
+  <div class="d-flex align-items-center mr-auto">
+    <i class="{{ iconClass }} + text-white lh-1 mr-3"></i>
+    <div class="lh-1">
+      <h1 class="h6 text-white lh-1">{{ title }}</h1>
+      <small>{{ subTitle }}</small>
+    </div>
+  </div>
+  <div class="p-3" *ngIf="botaoListar">
+    <button class="btn btn-outline-light" (click)="listar()">Listar {{ title }}</button>
+  </div>
+</div>
