--- a/src/assets/scss/black-dashboard/custom/_variables.scss
+++ b/src/assets/scss/black-dashboard/custom/_variables.scss
@@ -897,6 +897,7 @@ $card-inner-border-radius:          calc(#{$card-border-radius} - #{$card-border
 $card-cap-bg:                       $gray-100 !default;
 $card-bg:                           $white !default;
 $card-black-background:             #27293d !default;
+$card-background-login:             #d4e5e7 !default;
 $card-img-overlay-padding:          1.25rem !default;
 
 //$card-group-margin:                 ($grid-gutter-width / 2);
