--- a/src/app/components/user/perfil/perfil.component.html
+++ b/src/app/components/user/perfil/perfil.component.html
@@ -3,24 +3,24 @@
     <div class="card">
       <div class="card-header">
         <app-title
-        [iconClass]="'fa fa-user-alt'"
-        [title]="'Perfil'"
-        [subTitle]="'Detalhe Usuario'"
+          [iconClass]="'fa fa-user-alt'"
+          [title]="'Perfil'"
+          [subTitle]="'Detalhe Usuario'"
         ></app-title>
-
       </div>
-      <div class="card-body ">
-        <form>
+      <div class="card-body">
+        <form [formGroup]="form">
           <div class="row">
             <div class="col-md-5 pr-md-1">
-              <div class="form-group">
-                <label> Company (disabled) </label>
+              <div class="">
+                <label> PermissionRole </label>
                 <input
                   class="form-control"
-                  disabled=""
                   placeholder="Company"
                   type="text"
-                  value="Creative Code Inc."
+                  formControlName="permissionRole"
+                  value="Admin"
+                  disabled
                 />
               </div>
             </div>
@@ -29,9 +29,9 @@
                 <label> Username </label>
                 <input
                   class="form-control"
-                  placeholder="Username"
+                  placeholder="teste1234"
+                  formControlName="userName"
                   type="text"
-                  value="michael23"
                 />
               </div>
             </div>
@@ -41,6 +41,7 @@
                 <input
                   class="form-control"
                   placeholder="mike@email.com"
+                  formControlName="email"
                   type="email"
                 />
               </div>
@@ -53,6 +54,7 @@
                 <input
                   class="form-control"
                   placeholder="Company"
+                  formControlName="primeiroNome"
                   type="text"
                   value="Mike"
                 />
@@ -64,6 +66,7 @@
                 <input
                   class="form-control"
                   placeholder="Last Name"
+                  formControlName="ultimoNome"
                   type="text"
                   value="Andrew"
                 />
@@ -71,14 +74,26 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">Function</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Developer</option>
+                  <option>Analyst</option>
+                  <option>DevOps</option>
+                  <option>PO</option>
+                  <option>Srum Master</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-8">
               <div class="form-group">
                 <label> Address </label>
                 <input
                   class="form-control"
                   placeholder="Home Address"
+                  formControlName="address"
                   type="text"
-                  value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09"
                 />
               </div>
             </div>
@@ -90,8 +105,8 @@
                 <input
                   class="form-control"
                   placeholder="City"
+                  formControlName="city"
                   type="text"
-                  value="Mike"
                 />
               </div>
             </div>
@@ -101,8 +116,8 @@
                 <input
                   class="form-control"
                   placeholder="Country"
+                  formControlName="country"
                   type="text"
-                  value="Andrew"
                 />
               </div>
             </div>
@@ -112,25 +127,87 @@
                 <input
                   class="form-control"
                   placeholder="ZIP Code"
+                  formControlName="postalCode"
                   type="number"
                 />
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
               <div class="form-group">
                 <label> About Me </label>
                 <textarea
                   class="form-control"
                   cols="80"
                   placeholder="Here can be your description"
+                  formControlName="aboutMe"
                   rows="4"
                   value="Mike"
+                ></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <p class="text-center">Change Password</p>
+            <div class="form-group row">
+              <div class="col-sm-6">
+                <div>Password</div>
+                <input
+                  type="password"
+                  class="form-control form-control-user"
+                  id="password"
+                  formControlName="password"
+                  [ngClass]="{
+                    'is-invalid': f.password?.errors && f.password?.touched
+                  }"
+                  placeholder="Password"
+                />
+                <div
+                  *ngIf="f.password.errors?.required"
+                  class="invalid-feedback"
                 >
-Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
-</textarea
+                  Passord e obrigatorio
+                </div>
+                <div
+                  *ngIf="f.password.errors?.minlength"
+                  class="invalid-feedback"
                 >
+                  Deve ter no minimo 4 caracteres
+                </div>
+                <div
+                  *ngIf="f.password.errors?.maxlength"
+                  class="invalid-feedback"
+                >
+                  Tamanho max permitido e de 50 caracteres
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div>Confirm Password</div>
+
+                <input
+                  type="password"
+                  class="form-control form-control-user"
+                  id="confirmPass"
+                  formControlName="confirmPass"
+                  [ngClass]="{
+                    'is-invalid':
+                      f.confirmPass?.errors && f.confirmPass?.touched
+                  }"
+                  placeholder="Repeat Password"
+                />
+                <div
+                  *ngIf="f.confirmPass.errors?.required"
+                  class="invalid-feedback"
+                >
+                  Confirmation Password e obrigatorio
+                </div>
+                <div
+                  *ngIf="f.confirmPass.errors?.mustMatch"
+                  class="invalid-feedback"
+                >
+                  Senhas nao sao iguais
+                </div>
               </div>
             </div>
           </div>
@@ -161,6 +238,17 @@ Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.
           Do not be scared of the truth because we need to restart the human
           foundation in truth And I love you like Kanye loves Kanye I love Rick
           Owens’ bed design but the back is...
+        </div>
+        <hr class="mt-2" />
+        <div class="row">
+          <div class="col">
+            <p>888</p>
+            Eventos Ministrados
+          </div>
+          <div class="col">
+            <p>5555</p>
+            Eventos Participados
+          </div>
         </div>
       </div>
       <div class="card-footer">
