--- a/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -128,7 +128,7 @@
           </div>
           <div class="card-footer">
             <div class="d-flex">
-              <button class="btn btn-secondary mr-auto border" (click)="resetForm()">
+              <button class="btn btn-secondary mr-auto border" (click)="resetForm($event)">
                 Cancelar Alteração
               </button>
               <button [disabled]="form.invalid" class="btn btn-success">
